# consul-seeder

./: LICENSE  README.md  consul-seeder.cabal
app/: Main.hs
src/: Client.hs  Model.hs  Options.hs
