name:                consul-seeder
version:             0.1.0.0
synopsis:            Populate consul from a yaml file
description:         Please see README.md
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable consul-seeder
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , yaml
                     , http-conduit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
