name:                consul-seeder
version:             0.1.0.0
synopsis:            Populate consul from a yaml file
description:         Please see README.md
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Library
  hs-source-dirs:    src
  build-depends:     base
                   , http-conduit
                   , bytestring
  default-language:    Haskell2010
  ghc-options:      -Wall
  exposed-modules:   Options
                   , Model
                   , Client

executable consul-seeder
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , yaml-light
                     , http-conduit
                     , consul-seeder
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
